<resources>
    <string name="app_name">DisruptiveDelivery</string>
    <string name="send_package">Send Package</string>
    <string name="track_package">Track Package</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="street_and_number">Street and Number</string>
    <string name="destination_address">Destination Address Information:</string>
    <string name="zipcode">Zipcode</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="package_dimensions_cm">Package \nDimensions (cm):</string>
    <string name="width">Width</string>
    <string name="depth">Depth</string>
    <string name="height">Height</string>
    <string name="breakable">Breakable?</string>
    <string name="perishable">Perishable (Food)?</string>
    <string name="pick_up_option">Do you want delivery driver to pick it up from your place?</string>
    <string name="address_for_pick_up">Address for our driver to pick the package from</string>
    <string name="pick_package_from">Pick package from</string>
    <string name="start_time">start time</string>
    <string name="end_time">end time</string>
    <string name="order_and_pay">Order and Pay</string>
    <string name="info">Info</string>
    <string name="code">Code</string>
    <string name="track_package_by_code">Track Package by Code</string>
    <string name="welcome">Welcome to Disruptive Delivery!</string>
    <string name="join_us">Join Us for Fast and Environmentally Friendly Deliveries All Around the World</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="disruptive_delivery">Disruptive Delivery</string>
    <string name="description_disruptive_delivery">The aim of the Disruptive Delivery Company is the ability to ship parcels from anywhere around the world to wherever you want to send it, prioritizing comfort and sustainability.</string>
    <string name="disruptive_delivery_moto">Distance is not an issue for us!</string>

    <string name="disruptive_delivery_orderList1">Order Id: 512, Nieuwe Kijk in Het Jastraat 13, 9712 SB Groningen</string>
    <string name="disruptive_delivery_orderList2">Order Id: 792, Hoofdstraat 32, 9491 AG Zeijen</string>
    <string name="disruptive_delivery_orderList3">Order Id: 654, Van Slichtenhorststraat 8, 6821 CL Arnhem</string>
    <string name="disruptive_delivery_orderList4">Order Id: 621, Nuijstraat 9, 6665 CR Driel</string>
    <string name="disruptive_delivery_orderList5">Order Id: 758, Heresingel 34, 9711 EV Groningen</string>
    <string name="disruptive_delivery_orderList6">Order Id: 321, Bilderdijklaan 20, 9721 PV, Groningen</string>
    <string name="disruptive_delivery_orderList7">Order Id: 678, A. Jacobsstraat 68, 9728 MD Groningen</string>
    <string name="disruptive_delivery_orderList8">Order Id: 365, Ruskenstukken 7, 9761 KL Eelde</string>
    <string name="disruptive_delivery_orderList9">Order Id: 642, Nieuwehaven 115, 2801 CV Gouda</string>
    <string name="disruptive_delivery_orderList10">Order Id: 127, Witte de Withstraat 93A, 3012 BN Rotterdam</string>
    <string name="list_of_orders_to_be_delivered">List of orders to be delivered</string>
    <string name="buy_now">Buy Now</string>
    <string name="complete_payment">Complete Payment</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="first_name">First Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="agree_terms_and_privacy_policy">I agree with the Terms of Use and the Privacy Policy</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already Have Account?</string>
    <string name="last_name">Last Name</string>
    <string name="preferences_profile">ProfileSharedPreferences</string>
    <string name="preference_first_name">FirstNamePreference</string>
    <string name="preference_last_name">LastNamePreference</string>
    <string name="preference_email">EmailPreference</string>
    <string name="preference_phone_number">PhoneNumberPreference</string>
    <string name="preference_street_and_number">StreetAndNumberPreference</string>
    <string name="preference_zipcode">ZipcodePreference</string>
    <string name="preference_city">CityPreference</string>
    <string name="preference_country">CountryPreference</string>
    <string name="fragment_tag_info">InfoFragment</string>
    <string name="fragment_tag_profile">ProfileFragment</string>
    <string name="fragment_tag_settings">SettingsFragment</string>
</resources>