<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_info"
        android:icon="@drawable/ic_info"
        android:title="@string/info"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_account_circle"/>

    <item
        android:id="@+id/item_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/item_log_out"
        android:icon="@drawable/ic_logout"
        android:title="@string/log_out"
        app:showAsAction="never"/>

</menu>