<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingHorizontal="20dp"
    android:id="@+id/constraint_layout_postal_address_form">

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/flexboxLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp"
        app:alignContent="stretch"
        app:alignItems="stretch"
        app:flexWrap="wrap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_street_and_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:accessibilityLiveRegion="polite"
            android:contentDescription="@string/street_and_number"
            android:labelFor="@+id/et_street_and_number">

            <EditText
                android:id="@+id/et_street_and_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="postalAddress"
                android:hint="@string/street_and_number"
                android:inputType="textPostalAddress"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextFields,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_zipcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:accessibilityLiveRegion="polite"
            android:contentDescription="@string/street_and_number"
            android:labelFor="@+id/et_zipcode">

            <EditText
                android:id="@+id/et_zipcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="postalCode"
                android:hint="@string/zipcode"
                android:inputType="textPostalAddress"
                android:minHeight="48dp"
                android:minEms="4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/et_street_and_number"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:accessibilityLiveRegion="polite"
            android:contentDescription="@string/street_and_number"
            android:labelFor="@+id/et_city">

            <EditText
                android:id="@+id/et_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:autofillHints="city"
                android:hint="@string/city"
                android:inputType="textPostalAddress"
                android:minHeight="48dp"
                android:minEms="4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextFields,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:accessibilityLiveRegion="polite"
            android:contentDescription="@string/street_and_number"
            android:labelFor="@+id/et_country">

            <EditText
                android:id="@+id/et_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:autofillHints="country"
                android:hint="@string/country"
                android:inputType="textPostalAddress"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:minEms="4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextFields,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

    </com.google.android.flexbox.FlexboxLayout>

</androidx.constraintlayout.widget.ConstraintLayout>